# commonlibrary_rust_ylong_http

./: Cargo.toml  README.en.md  README.md  README_zh.md  bundle.json
docs/: user_guide.md
patches/: build.patch  netstack.patch  patches.json
scripts/: bench_https_proxy.sh
ylong_http/: BUILD.gn  Cargo.toml  README.md
ylong_http/examples/: mimebody_multi.rs  mimebody_multi_then_async_data.rs
ylong_http/src/: error.rs  headers.rs  lib.rs  pseudo.rs  test_util.rs  version.rs
ylong_http/src/body/: chunk.rs  empty.rs  mod.rs  text.rs
ylong_http/src/body/mime/: mime_test_macro.rs  mimetype.rs  mod.rs  simple.rs
ylong_http/src/body/mime/common/: headers.rs  mix.rs  mod.rs  multi.rs  part.rs
ylong_http/src/body/mime/decode/: mod.rs  multi.rs  part.rs
ylong_http/src/body/mime/encode/: mod.rs  multi.rs  part.rs
ylong_http/src/h1/: error.rs  mod.rs
ylong_http/src/h1/request/: encoder.rs  mod.rs
ylong_http/src/h1/response/: decoder.rs  mod.rs
ylong_http/src/h2/: decoder.rs  encoder.rs  error.rs  frame.rs  mod.rs  parts.rs  pseudo.rs
ylong_http/src/h2/hpack/: decoder.rs  encoder.rs  integer.rs  mod.rs  table.rs
ylong_http/src/h2/hpack/representation/: decoder.rs  encoder.rs  mod.rs
ylong_http/src/h3/: connection.rs  decoder.rs  encoder.rs  error.rs  frame.rs  mod.rs  octets.rs  parts.rs  pseudo.rs
ylong_http/src/h3/qpack/: decoder.rs  encoder.rs  error.rs  integer.rs  mod.rs  table.rs
ylong_http/src/h3/qpack/format/: decoder.rs  encoder.rs  mod.rs
ylong_http/src/huffman/: consts.rs  mod.rs
ylong_http/src/request/: method.rs  mod.rs  uri.rs
ylong_http/src/request/uri/: mod.rs  percent_encoding.rs
ylong_http/src/response/: mod.rs  status.rs
ylong_http_client/: BUILD.gn  Cargo.toml  README.md  build.rs
ylong_http_client/examples/: async_certs_adapter.rs  async_http.rs  async_http2.rs  async_http2_multi.rs  async_http_multi.rs  async_https_outside.rs  async_https_proxy_bench.rs  async_proxy_http.rs  async_redirect_http.rs  sync_http.rs  sync_https_outside.rs  sync_proxy_http.rs  sync_redirect_http.rs
ylong_http_client/src/: error.rs  lib.rs
ylong_http_client/src/async_impl/: adapter.rs  client.rs  connector.rs  http_body.rs  mix.rs  mod.rs  pool.rs  request.rs  response.rs  timeout.rs
ylong_http_client/src/async_impl/conn/: http1.rs  http2.rs  http3.rs  mod.rs
ylong_http_client/src/async_impl/connector/: mod.rs  stream.rs
ylong_http_client/src/async_impl/dns/: default.rs  doh.rs  happy_eyeballs.rs  mod.rs  resolver.rs
ylong_http_client/src/async_impl/downloader/: builder.rs  mod.rs  operator.rs
ylong_http_client/src/async_impl/interceptor/: mod.rs
ylong_http_client/src/async_impl/quic/: mod.rs
ylong_http_client/src/async_impl/ssl_stream/: c_ssl_stream.rs  mix.rs  mod.rs  wrapper.rs
ylong_http_client/src/async_impl/uploader/: builder.rs  mod.rs  operator.rs
ylong_http_client/src/sync_impl/: client.rs  connector.rs  http_body.rs  mod.rs  pool.rs  reader.rs  ssl_stream.rs
ylong_http_client/src/sync_impl/conn/: http1.rs  mod.rs
ylong_http_client/src/util/: base64.rs  data_ref.rs  dispatcher.rs  mod.rs  normalizer.rs  pool.rs  proxy.rs  proxy_tunnel.rs  redirect.rs
ylong_http_client/src/util/c_openssl/: adapter.rs  bio.rs  error.rs  foreign.rs  mod.rs  stack.rs  x509.rs
ylong_http_client/src/util/c_openssl/ffi/: bio.rs  callback.rs  err.rs  mod.rs  pem.rs  ssl.rs  stack.rs  x509.rs
ylong_http_client/src/util/c_openssl/ssl/: ctx.rs  error.rs  filetype.rs  method.rs  mod.rs  ssl_base.rs  stream.rs  version.rs
ylong_http_client/src/util/c_openssl/verify/: mod.rs  pinning.rs
ylong_http_client/src/util/config/: client.rs  connector.rs  http.rs  mod.rs  proxy_tls.rs  settings.rs
ylong_http_client/src/util/config/tls/: mod.rs
ylong_http_client/src/util/config/tls/alpn/: mod.rs
ylong_http_client/src/util/config/tls/verifier/: mod.rs  openssl.rs
ylong_http_client/src/util/h2/: data_ref.rs  input.rs  manager.rs  mod.rs  output.rs  streams.rs
ylong_http_client/src/util/h2/buffer/: settings.rs  window.rs
ylong_http_client/src/util/h3/: io_manager.rs  streams.rs
ylong_http_client/src/util/progress/: rate_limit.rs
ylong_http_client/tests/: helper.rs  sdv_async_client_build.rs  sdv_async_custom_dns_resolver.rs  sdv_async_http.rs  sdv_async_http_client_error.rs  sdv_async_http_on_tcp.rs  sdv_async_http_proxy.rs  sdv_async_https_c_ssl.rs  sdv_async_https_pinning.rs  sdv_async_https_proxy.rs  sdv_client.rs  sdv_https_c_ssl.rs  sdv_sync_http.rs  sdv_sync_http_on_tcp.rs  sdv_sync_https_c_ssl.rs
ylong_http_client/tests/common/: async_utils.rs  mod.rs  sync_utils.rs
ylong_http_client/tests/tcp_server/: async_utils.rs  mod.rs  sync_utils.rs
